# Teaching-intelligence-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e8c6b1a9f4d_expand_course_cover_image_to_text.py  4f1a8b0c9d2e_add_answer_votes_and_question_views.py  7c54278adc01_initial_schema.py  9a4f13c7b8d2_make_notes_course_optional_and_searchable.py  c1d7f2a6e9b4_add_note_share_links.py  d6a8b4c2e1f0_expand_codelabs_for_sandbox_scoring.py  e9f2a7c5d3b1_add_codelab_solution_and_total_score.py  f4b8c2d9a6e1_expand_exams_for_online_assessment.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  codelab.py  common.py  course.py  exam.py  note.py  question.py  user.py
backend/app/routers/: __init__.py  auth.py  codelabs.py  courses.py  exams.py  notes.py  questions.py
backend/app/schemas/: __init__.py  codelab.py  course.py  exam.py  note.py  question.py  user.py
backend/app/services/: __init__.py  auth_service.py  codelab_service.py  course_service.py  exam_service.py  note_service.py  question_service.py  sandbox_service.py
backend/app/tasks/: __init__.py  celery_app.py  notes.py
backend/tests/: test_health.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  (+1 more)
vibe-prompts/: README.md  frontprompt.md  prompt2.md  prompt3.md  prompt4.md  prompt6.md  prompt7.md  prompt8.md  prompts0&1.md  report.md
(+49 files in other folders)
