[project]
name = "math-edu-backend"
version = "0.1.0"
description = "Backend service for math education platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "python-jose>=3.3.0",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "anthropic>=0.50.0",
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.0",
  "pymilvus>=2.4.0",
  "celery>=5.3.0",
  "structlog>=24.0.0",
  "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
